# tourists

./: .env  .env.sample  .gitignore  README.md  app.py  build.sh  pyproject.toml  render.yaml
src/tourists_api/: __init__.py  config.py  supabase.py  supabase_client.py
src/tourists_api/main/: Pipfile  __init__.py  agent.py  listen_gmail.py  mailAgent.py  routes.py  test_gmail.py
src/tourists_api/utils/: auth.py
