[tool.poetry]
name = "tourists_api"
version = "0.1.0"
description = ""
authors = ["ryo-27 <heren1782@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.2"
python-dotenv = "^1.1.1"
dotenv = "^0.9.9"
cachetools = "5.5.2"
certifi = "2025.8.3"
charset-normalizer = "3.4.3"
google-api-core = "2.25.1"
google-api-python-client = "2.183.0"
google-auth = "2.40.3"
google-auth-httplib2 = "0.2.0"
google-auth-oauthlib = "1.2.2"
google-cloud-pubsub = "2.31.1"
googleapis-common-protos = "1.70.0"
grpc-google-iam-v1 = "0.14.2"
grpcio = "1.75.0"
grpcio-status = "1.75.0"
httplib2 = "0.31.0"
idna = "3.10"
importlib-metadata = "8.7.0"
oauthlib = "3.3.1"
opentelemetry-api = "1.37.0"
opentelemetry-sdk = "1.37.0"
opentelemetry-semantic-conventions = "0.58b0"
proto-plus = "1.26.1"
protobuf = "6.32.1"
pyasn1 = "0.6.1"
pyasn1-modules = "0.4.2"
pyparsing = "3.2.5"
requests = "2.32.5"
requests-oauthlib = "2.0.0"
rsa = "4.9.1"
typing-extensions = "4.15.0"
uritemplate = "4.2.0"
urllib3 = "2.5.0"
zipp = "3.23.0"
supabase = "^2.20.0"
pyjwt = "^2.10.1"
werkzeug = "^3.1.3"
gotrue = "^2.12.4"
pytest = "^8.4.2"


[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
ruff = "^0.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
line-length = 88
target-version = "py312"

# Ruffにチェックさせたいルールセットを選択
# F: Pyflakes (エラー検出)
# E, W: pycodestyle (警告)
# I: isort (import順の整理)
select = ["F", "E", "W", "I"]

[tool.ruff.lint.isort]
known_first_party = ["tourists_api"] # アプリ名を指定

[tool.mypy]
python_version = "3.12"
warn_return_any = true
ignore_missing_imports = true
